states/network/firewall/files/iptables.rules
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -d 10.224.4.0/24 -p tcp -j ACCEPT
-A OUTPUT -d 193.17.73.18/32 -p tcp --dport 4505 -j ACCEPT
-A OUTPUT -d 193.17.73.18/32 -p tcp --dport 4506 -j ACCEPT
-A OUTPUT -d 193.17.73.18/32 -p udp --dport 4505 -j ACCEPT
-A OUTPUT -d 193.17.73.18/32 -p udp --dport 4506 -j ACCEPT
-A OUTPUT -d 10.224.4.0/24 -p udp -j ACCEPT
-A OUTPUT -d 163.5.55.21/32 -p tcp -j ACCEPT
-A OUTPUT -d 163.5.55.21/32 -p udp -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
COMMIT
